cuenta atras feta, i cookies comensat

--- a/UD05 - Estructures de dades - Objectes i Arrays/Temps/cronometro.html
+++ b/UD05 - Estructures de dades - Objectes i Arrays/Temps/cronometro.html
@@ -14,7 +14,7 @@
     </div>
     <button id="start">START</button>
     <BUTTON id="stop">STOP</BUTTON>
-    <button id="restart">RESTART</button>
+    <button id="restart" disabled>RESTART</button>
 
 
 
