--- a/Joc Penjat/index.html
+++ b/Joc Penjat/index.html
@@ -11,7 +11,7 @@
     <p>Seleccioni una lletra, li queden <span id="intentsRestants">7</span> intents</p>
 
     <div class="dibuixPenjat">
-        <img src="./imgs/dibuixPenjat.jpg" alt="">
+        <img src="./imgs/dibuixPenjat.jpg" alt="" id="imatgePenjat">
     </div>
 
     <div class="contenedorParaulaSecreta">
@@ -56,8 +56,18 @@
 
     <p>Has comès <span id="numErrors">0</span> errors</p>
 
-    <div class="temps">
-       00:00
+    <p class="temps">00:00 </p>
+
+    <div class="rankingResultats">
+        <div class="podium">
+            <div id="segon" class="escalo-podium"><div>2n</div></div>
+            <div id="primer" class="escalo-podium"><div>1r</div></div>
+            <div id="tercer" class="escalo-podium"><div>3r</div></div>
+        </div>
+        <div class="top10">
+            <div><p>Logo</p> <p>Nom d'usuari</p> <p>Puntuacio</p></div>
+            <div><div class="fotoPerfil">A</div> <p>Arnau Marques</p> <p>2026</p></div>
+        </div>
     </div>
 
     <script src="./script.js"></script>
