ranking puntuacions casi acabat

--- a/Joc Penjat/index.html
+++ b/Joc Penjat/index.html
@@ -10,9 +10,10 @@
 
     <p>Seleccioni una lletra, li queden <span id="intentsRestants">7</span> intents</p>
 
-    <form action="">
+    <form action="#">
         <label for="nom">Nom d'usuari</label>
         <input type="text" name="nom" maxlength="14" id="nomUsuari">
+        
     </form>
 
     <div class="dibuixPenjat">
@@ -70,17 +71,7 @@
             <div id="tercer" class="escalo-podium"><div>3r</div></div>
         </div>
         <div class="top10">
-            <!-- <div><p>Logo</p> <p>Nom d'usuari</p> <p>Puntuacio</p></div> -->
-            <!-- <div class="contenidorPuntuacions">
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">P</div> <p class="nomUsuari">Peri</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-                <div><div class="fotoPerfil">A</div> <p class="nomUsuari">Arnau Marques</p> <p class="puntuacioUsuari">2026</p></div>
-            </div> -->
+      
             <table class="contenidorPuntuacions">
                 <thead>
                     <tr class="capçalera">
@@ -92,7 +83,7 @@
             </thead>
 
             <tbody>
-                <tr>
+                <!-- <tr>
                     <td>4</td>
                     <td><div class="fotoPerfil">A</div></td>
                     <td>Arnau Marques</td>
@@ -133,7 +124,7 @@
                     <td><div class="fotoPerfil">A</div></td>
                     <td>Luca Segui</td>
                     <td>20226</td>
-                </tr>
+                </tr> -->
             </tbody>
             </table>
         </div>
