--- a/Joc Penjat/joc.html
+++ b/Joc Penjat/joc.html
@@ -88,7 +88,7 @@
             </tbody>
             </table>
 
-            <table class="contenidorPuntuacions futbol">
+            <table class="contenidorPuntuacions paraula">
                 <thead>
                     <tr class="capçalera">
                         <th>Posicio</th>
